cambio milisegundos a microsegundos

--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -22,14 +22,14 @@
     "\n",
     "* dst: Host contactado\n",
     "* response: True si se obtuvo respuesta; False en caso contrario\n",
-    "* rtt_ms: RTT en milisegundos (None si no se obtuvo respuesta)\n",
+    "* rtt_ms: RTT en microsegundos (None si no se obtuvo respuesta)\n",
     "* len: Longitud del paquete recibido (None si no se obtuvo respuesta)\n",
     "* ttl: Time to live del paquete recibido (None si no se obtuvo respuesta)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
@@ -40,26 +40,23 @@
     "    data[\"dst\"] = host\n",
     "\n",
     "    print(f\"Pinging {host}...\")\n",
-    "    packet = IP(dst=host)/ICMP()\n",
+    "    packet = IP(dst=host)/ICMP(type=8)\n",
     "    response = sr1(packet, timeout=10, verbose=False) # sr1: envío y espero una sola respuesta\n",
     "    inicio = time.time()\n",
     "    if response:\n",
     "        fin = time.time()\n",
-    "        rtt_ms = (fin - inicio) * 1000\n",
+    "        rtt_mcs = (fin - inicio) * 1000000\n",
     "        print(f\"Respuesta recibida de {host}\")\n",
-    "        # response.show()\n",
-    "        # print(response.len)\n",
-    "        # print(f\"Tiempo de respuesta: {total_ms} milisegundos\")\n",
     "        \n",
     "        data[\"response\"] = True\n",
-    "        data[\"rtt_ms\"] = rtt_ms\n",
+    "        data[\"rtt_us\"] = rtt_mcs\n",
     "        data[\"len\"] = response.len\n",
     "        data[\"ttl\"] = response.ttl\n",
     "\n",
     "    else:\n",
     "        print(f\"No se obtuvo respuesta de {host}\")\n",
     "        data[\"response\"] = False\n",
-    "        data[\"rtt_ms\"] = None\n",
+    "        data[\"rtt_us\"] = None\n",
     "        data[\"len\"] = None\n",
     "        data[\"ttl\"] = None\n",
     "    \n",
@@ -77,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "44f14bbb",
    "metadata": {},
    "outputs": [
@@ -94,12 +91,12 @@
       "text/plain": [
        "{'dst': 'utdt.edu.ar',\n",
        " 'response': True,\n",
-       " 'rtt_ms': 0.0007152557373046875,\n",
+       " 'rtt_us': 0.476837158203125,\n",
        " 'len': 28,\n",
        " 'ttl': 56}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -144,12 +141,13 @@
     "    \n",
     "    for host in hosts:\n",
     "        resultado = ping(host)\n",
+    "        print(resultado)\n",
     "\n",
     "        if resultado[\"response\"]: # Si se recibió respuesta\n",
     "            received_packets += 1\n",
-    "            total_rtt += resultado[\"rtt_ms\"]\n",
-    "            min_rtt = min(min_rtt, resultado[\"rtt_ms\"])\n",
-    "            max_rtt = max(max_rtt, resultado[\"rtt_ms\"])\n",
+    "            total_rtt += resultado[\"rtt_us\"]\n",
+    "            min_rtt = min(min_rtt, resultado[\"rtt_us\"])\n",
+    "            max_rtt = max(max_rtt, resultado[\"rtt_us\"])\n",
     "        else:\n",
     "            lost_packets += 1\n",
     "    \n",
@@ -162,8 +160,8 @@
     "    res[\"lost_packets\"] = lost_packets\n",
     "    res[\"loss_percentage\"] = (lost_packets / sent_packets) \n",
     "    res[\"total_rtt\"] = total_rtt\n",
-    "    res[\"min_time\"] = min_rtt if min_rtt != float('inf') else None\n",
-    "    res[\"max_time\"] = max_rtt if max_rtt != float('-inf') else None\n",
+    "    res[\"min_rtt\"] = min_rtt if min_rtt != float('inf') else None\n",
+    "    res[\"max_rtt\"] = max_rtt if max_rtt != float('-inf') else None\n",
     "    res[\"average_rtt\"] = average_rtt if received_packets > 0 else None\n",
     "    \n",
     "    return res"
@@ -171,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -181,12 +179,16 @@
      "text": [
       "Pinging sydney.edu.au...\n",
       "Respuesta recibida de sydney.edu.au\n",
+      "{'dst': 'sydney.edu.au', 'response': True, 'rtt_us': 1.1920928955078125, 'len': 28, 'ttl': 110}\n",
       "Pinging utdt.edu.ar...\n",
       "Respuesta recibida de utdt.edu.ar\n",
+      "{'dst': 'utdt.edu.ar', 'response': True, 'rtt_us': 0.476837158203125, 'len': 28, 'ttl': 56}\n",
       "Pinging ie.edu...\n",
       "Respuesta recibida de ie.edu\n",
+      "{'dst': 'ie.edu', 'response': True, 'rtt_us': 0.476837158203125, 'len': 28, 'ttl': 248}\n",
       "Pinging mit.edu...\n",
-      "Respuesta recibida de mit.edu\n"
+      "Respuesta recibida de mit.edu\n",
+      "{'dst': 'mit.edu', 'response': True, 'rtt_us': 1.6689300537109375, 'len': 28, 'ttl': 53}\n"
      ]
     },
     {
@@ -197,13 +199,13 @@
        " 'received_packets': 4,\n",
        " 'lost_packets': 0,\n",
        " 'loss_percentage': 0.0,\n",
-       " 'total_rtt': 0.00286102294921875,\n",
-       " 'min_time': 0.000476837158203125,\n",
-       " 'max_time': 0.0011920928955078125,\n",
-       " 'average_rtt': 0.0007152557373046875}"
+       " 'total_rtt': 3.814697265625,\n",
+       " 'min_rtt': 0.476837158203125,\n",
+       " 'max_rtt': 1.6689300537109375,\n",
+       " 'average_rtt': 0.95367431640625}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
