--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -22,14 +22,14 @@
     "\n",
     "* dst: Host contactado\n",
     "* response: True si se obtuvo respuesta; False en caso contrario\n",
-    "* rtt_ms: RTT en microsegundos (None si no se obtuvo respuesta)\n",
+    "* rtt_us: RTT en microsegundos (None si no se obtuvo respuesta)\n",
     "* len: Longitud del paquete recibido (None si no se obtuvo respuesta)\n",
     "* ttl: Time to live del paquete recibido (None si no se obtuvo respuesta)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "44f14bbb",
    "metadata": {},
    "outputs": [
@@ -91,12 +91,12 @@
       "text/plain": [
        "{'dst': 'utdt.edu.ar',\n",
        " 'response': True,\n",
-       " 'rtt_us': 0.476837158203125,\n",
+       " 'rtt_us': 1.430511474609375,\n",
        " 'len': 28,\n",
        " 'ttl': 56}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -168,8 +168,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1b20695",
+   "metadata": {},
+   "source": [
+    "Contactamos a 5 universidades de continentes distintos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -179,39 +187,47 @@
      "text": [
       "Pinging sydney.edu.au...\n",
       "Respuesta recibida de sydney.edu.au\n",
-      "{'dst': 'sydney.edu.au', 'response': True, 'rtt_us': 1.1920928955078125, 'len': 28, 'ttl': 110}\n",
-      "Pinging utdt.edu.ar...\n",
-      "Respuesta recibida de utdt.edu.ar\n",
-      "{'dst': 'utdt.edu.ar', 'response': True, 'rtt_us': 0.476837158203125, 'len': 28, 'ttl': 56}\n",
+      "{'dst': 'sydney.edu.au', 'response': True, 'rtt_us': 5.7220458984375, 'len': 28, 'ttl': 110}\n",
+      "Pinging cuhk.edu.cn...\n",
+      "Respuesta recibida de cuhk.edu.cn\n",
+      "{'dst': 'cuhk.edu.cn', 'response': True, 'rtt_us': 3.814697265625, 'len': 28, 'ttl': 112}\n",
+      "Pinging alexu.edu.eg...\n",
+      "Respuesta recibida de alexu.edu.eg\n",
+      "{'dst': 'alexu.edu.eg', 'response': True, 'rtt_us': 0.7152557373046875, 'len': 28, 'ttl': 45}\n",
       "Pinging ie.edu...\n",
       "Respuesta recibida de ie.edu\n",
-      "{'dst': 'ie.edu', 'response': True, 'rtt_us': 0.476837158203125, 'len': 28, 'ttl': 248}\n",
+      "{'dst': 'ie.edu', 'response': True, 'rtt_us': 0.7152557373046875, 'len': 28, 'ttl': 248}\n",
       "Pinging mit.edu...\n",
       "Respuesta recibida de mit.edu\n",
-      "{'dst': 'mit.edu', 'response': True, 'rtt_us': 1.6689300537109375, 'len': 28, 'ttl': 53}\n"
+      "{'dst': 'mit.edu', 'response': True, 'rtt_us': 0.7152557373046875, 'len': 28, 'ttl': 53}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'hosts': {'ie.edu', 'mit.edu', 'sydney.edu.au', 'utdt.edu.ar'},\n",
-       " 'sent_packets': 4,\n",
-       " 'received_packets': 4,\n",
+       "{'hosts': {'alexu.edu.eg',\n",
+       "  'cuhk.edu.cn',\n",
+       "  'ie.edu',\n",
+       "  'mit.edu',\n",
+       "  'sydney.edu.au'},\n",
+       " 'sent_packets': 5,\n",
+       " 'received_packets': 5,\n",
        " 'lost_packets': 0,\n",
        " 'loss_percentage': 0.0,\n",
-       " 'total_rtt': 3.814697265625,\n",
-       " 'min_rtt': 0.476837158203125,\n",
-       " 'max_rtt': 1.6689300537109375,\n",
-       " 'average_rtt': 0.95367431640625}"
+       " 'total_rtt': 11.682510375976562,\n",
+       " 'min_rtt': 0.7152557373046875,\n",
+       " 'max_rtt': 5.7220458984375,\n",
+       " 'average_rtt': 2.3365020751953125}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "destinos = {\"utdt.edu.ar\", \"mit.edu\", \"ie.edu\", \"sydney.edu.au\"}\n",
+    "\n",
+    "destinos = {\"mit.edu\", \"ie.edu\", \"sydney.edu.au\", \"cuhk.edu.cn\", \"alexu.edu.eg\"}\n",
     "\n",
     "ping_multiple_hosts(destinos)"
    ]
