--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "44f14bbb",
    "metadata": {},
    "outputs": [
@@ -89,12 +89,12 @@
       "text/plain": [
        "{'dst': 'utdt.edu.ar',\n",
        " 'response': True,\n",
-       " 'rtt_us': 1.430511474609375,\n",
+       " 'rtt_us': 2.384185791015625,\n",
        " 'len': 28,\n",
        " 'ttl': 56}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -135,6 +135,7 @@
     "    total_rtt = 0\n",
     "    min_rtt = float('inf')\n",
     "    max_rtt = float('-inf')\n",
+    "    lista_rtts = []\n",
     "    \n",
     "    for host in hosts:\n",
     "        resultado = ping(host)\n",
@@ -145,6 +146,8 @@
     "            total_rtt += resultado[\"rtt_us\"]\n",
     "            min_rtt = min(min_rtt, resultado[\"rtt_us\"])\n",
     "            max_rtt = max(max_rtt, resultado[\"rtt_us\"])\n",
+    "            lista_rtts.append(resultado[\"rtt_us\"])\n",
+    "\n",
     "        else:\n",
     "            lost_packets += 1\n",
     "    \n",
@@ -160,6 +163,7 @@
     "    res[\"min_rtt\"] = min_rtt if min_rtt != float('inf') else None\n",
     "    res[\"max_rtt\"] = max_rtt if max_rtt != float('-inf') else None\n",
     "    res[\"average_rtt\"] = average_rtt if received_packets > 0 else None\n",
+    "    res[\"sd_rtt\"] = statistics.stdev(lista_rtts) if len(lista_rtts) > 1 else None\n",
     "    \n",
     "    return res"
    ]
@@ -174,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -182,21 +186,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pinging sydney.edu.au...\n",
-      "Respuesta recibida de sydney.edu.au\n",
-      "{'dst': 'sydney.edu.au', 'response': True, 'rtt_us': 5.7220458984375, 'len': 28, 'ttl': 110}\n",
-      "Pinging cuhk.edu.cn...\n",
-      "Respuesta recibida de cuhk.edu.cn\n",
-      "{'dst': 'cuhk.edu.cn', 'response': True, 'rtt_us': 3.814697265625, 'len': 28, 'ttl': 112}\n",
-      "Pinging alexu.edu.eg...\n",
+      "Pinging alexu.edu.eg...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Respuesta recibida de alexu.edu.eg\n",
-      "{'dst': 'alexu.edu.eg', 'response': True, 'rtt_us': 0.7152557373046875, 'len': 28, 'ttl': 45}\n",
-      "Pinging ie.edu...\n",
-      "Respuesta recibida de ie.edu\n",
-      "{'dst': 'ie.edu', 'response': True, 'rtt_us': 0.7152557373046875, 'len': 28, 'ttl': 248}\n",
+      "{'dst': 'alexu.edu.eg', 'response': True, 'rtt_us': 2.6226043701171875, 'len': 28, 'ttl': 45}\n",
       "Pinging mit.edu...\n",
       "Respuesta recibida de mit.edu\n",
-      "{'dst': 'mit.edu', 'response': True, 'rtt_us': 0.7152557373046875, 'len': 28, 'ttl': 53}\n"
+      "{'dst': 'mit.edu', 'response': True, 'rtt_us': 1.6689300537109375, 'len': 28, 'ttl': 48}\n",
+      "Pinging cuhk.edu.cn...\n",
+      "Respuesta recibida de cuhk.edu.cn\n",
+      "{'dst': 'cuhk.edu.cn', 'response': True, 'rtt_us': 2.1457672119140625, 'len': 28, 'ttl': 112}\n",
+      "Pinging sydney.edu.au...\n",
+      "Respuesta recibida de sydney.edu.au\n",
+      "{'dst': 'sydney.edu.au', 'response': True, 'rtt_us': 2.6226043701171875, 'len': 28, 'ttl': 111}\n",
+      "Pinging ie.edu...\n",
+      "Respuesta recibida de ie.edu\n",
+      "{'dst': 'ie.edu', 'response': True, 'rtt_us': 1.9073486328125, 'len': 28, 'ttl': 248}\n"
      ]
     },
     {
@@ -211,13 +221,14 @@
        " 'received_packets': 5,\n",
        " 'lost_packets': 0,\n",
        " 'loss_percentage': 0.0,\n",
-       " 'total_rtt': 11.682510375976562,\n",
-       " 'min_rtt': 0.7152557373046875,\n",
-       " 'max_rtt': 5.7220458984375,\n",
-       " 'average_rtt': 2.3365020751953125}"
+       " 'total_rtt': 10.967254638671875,\n",
+       " 'min_rtt': 1.6689300537109375,\n",
+       " 'max_rtt': 2.6226043701171875,\n",
+       " 'average_rtt': 2.193450927734375,\n",
+       " 'sd_rtt': 0.42649611997600356}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
