intento implementar inciso 3; a chequear

--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -29,15 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ping(host): \n",
     "\n",
-    "    data = dict()\n",
-    "    data[\"dst\"] = host\n",
+    "    codigos = {\n",
+    "        0: \"Red de destino inalcanzable\",\n",
+    "        1: \"Host de destino inalcanzable\"}\n",
+    "    \n",
+    "    # Creo diccionario con valores por defecto\n",
+    "    data = {\n",
+    "        \"dst\": host,\n",
+    "        \"response\": False,\n",
+    "        \"rtt_us\": None,\n",
+    "        \"len\": None,\n",
+    "        \"ttl\": None\n",
+    "    }\n",
+    "    \n",
     "    print(f\"Pinging {host}...\")\n",
     "    packet = IP(dst=host)/ICMP(type=8)\n",
     "    response = sr1(packet, timeout=10, verbose=False) # sr1: envío y espero una sola respuesta\n",
@@ -45,20 +56,20 @@
     "    \n",
     "    if response:\n",
     "        fin = time.time()\n",
-    "        rtt_mcs = (fin - inicio) * 1000000\n",
-    "        print(f\"Respuesta recibida de {host}\")\n",
-    "        data[\"response\"] = True\n",
-    "        data[\"rtt_us\"] = rtt_mcs\n",
-    "        data[\"len\"] = response.len\n",
-    "        data[\"ttl\"] = response.ttl\n",
     "\n",
-    "    else:\n",
-    "        print(f\"No se obtuvo respuesta de {host}\")\n",
-    "        data[\"response\"] = False\n",
-    "        data[\"rtt_us\"] = None\n",
-    "        data[\"len\"] = None\n",
-    "        data[\"ttl\"] = None\n",
-    "    \n",
+    "        if response.type == 3:\n",
+    "            icmp_layer = response.getlayer(ICMP)\n",
+    "            code = icmp_layer.code\n",
+    "            print(f\"Destino {host} inalcanzable: \" + codigos[code])\n",
+    "        \n",
+    "        elif response.type == 0: # Si la respuesta es echo reply\n",
+    "            rtt_mcs = (fin - inicio) * 1000000\n",
+    "            print(f\"Respuesta recibida de {host}\")\n",
+    "            data[\"response\"] = True\n",
+    "            data[\"rtt_us\"] = rtt_mcs\n",
+    "            data[\"len\"] = response.len\n",
+    "            data[\"ttl\"] = response.ttl\n",
+    "\n",
     "    return data"
    ]
   },
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "44f14bbb",
    "metadata": {},
    "outputs": [
@@ -89,12 +100,12 @@
       "text/plain": [
        "{'dst': 'utdt.edu.ar',\n",
        " 'response': True,\n",
-       " 'rtt_us': 2.384185791015625,\n",
+       " 'rtt_us': 3.5762786865234375,\n",
        " 'len': 28,\n",
-       " 'ttl': 56}"
+       " 'ttl': 55}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,12 +127,12 @@
     "* RTT promedio\n",
     "* RTT mínimo\n",
     "* RTT máximo\n",
-    "* Desvío estándar del RTT promedio A QUE SE REFIERE?\n"
+    "* Desvío estándar del RTT promedio\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -178,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -186,27 +197,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pinging alexu.edu.eg...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Respuesta recibida de alexu.edu.eg\n",
-      "{'dst': 'alexu.edu.eg', 'response': True, 'rtt_us': 2.6226043701171875, 'len': 28, 'ttl': 45}\n",
-      "Pinging mit.edu...\n",
-      "Respuesta recibida de mit.edu\n",
-      "{'dst': 'mit.edu', 'response': True, 'rtt_us': 1.6689300537109375, 'len': 28, 'ttl': 48}\n",
       "Pinging cuhk.edu.cn...\n",
       "Respuesta recibida de cuhk.edu.cn\n",
-      "{'dst': 'cuhk.edu.cn', 'response': True, 'rtt_us': 2.1457672119140625, 'len': 28, 'ttl': 112}\n",
+      "{'dst': 'cuhk.edu.cn', 'response': True, 'rtt_us': 1.1920928955078125, 'len': 28, 'ttl': 112}\n",
       "Pinging sydney.edu.au...\n",
       "Respuesta recibida de sydney.edu.au\n",
-      "{'dst': 'sydney.edu.au', 'response': True, 'rtt_us': 2.6226043701171875, 'len': 28, 'ttl': 111}\n",
+      "{'dst': 'sydney.edu.au', 'response': True, 'rtt_us': 1.9073486328125, 'len': 28, 'ttl': 107}\n",
+      "Pinging mit.edu...\n",
+      "Respuesta recibida de mit.edu\n",
+      "{'dst': 'mit.edu', 'response': True, 'rtt_us': 0.7152557373046875, 'len': 28, 'ttl': 50}\n",
       "Pinging ie.edu...\n",
       "Respuesta recibida de ie.edu\n",
-      "{'dst': 'ie.edu', 'response': True, 'rtt_us': 1.9073486328125, 'len': 28, 'ttl': 248}\n"
+      "{'dst': 'ie.edu', 'response': True, 'rtt_us': 1.6689300537109375, 'len': 28, 'ttl': 246}\n",
+      "Pinging alexu.edu.eg...\n",
+      "Respuesta recibida de alexu.edu.eg\n",
+      "{'dst': 'alexu.edu.eg', 'response': True, 'rtt_us': 1.9073486328125, 'len': 28, 'ttl': 47}\n"
      ]
     },
     {
@@ -221,14 +226,14 @@
        " 'received_packets': 5,\n",
        " 'lost_packets': 0,\n",
        " 'loss_percentage': 0.0,\n",
-       " 'total_rtt': 10.967254638671875,\n",
-       " 'min_rtt': 1.6689300537109375,\n",
-       " 'max_rtt': 2.6226043701171875,\n",
-       " 'average_rtt': 2.193450927734375,\n",
-       " 'sd_rtt': 0.42649611997600356}"
+       " 'total_rtt': 7.3909759521484375,\n",
+       " 'min_rtt': 0.7152557373046875,\n",
+       " 'max_rtt': 1.9073486328125,\n",
+       " 'average_rtt': 1.4781951904296875,\n",
+       " 'sd_rtt': 0.5168791625184727}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
