--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
     "    # Creo diccionario con valores por defecto\n",
     "    data = {\n",
     "        \"dst\": host,\n",
-    "        \"response\": False,\n",
+    "        \"response_type\": None,\n",
     "        \"rtt_us\": None,\n",
     "        \"len\": None,\n",
     "        \"ttl\": None\n",
@@ -61,11 +61,12 @@
     "            icmp_layer = response.getlayer(ICMP)\n",
     "            code = icmp_layer.code\n",
     "            print(f\"Destino {host} inalcanzable: \" + codigos[code])\n",
+    "            data[\"response_type\"] = 3\n",
     "        \n",
     "        elif response.type == 0: # Si la respuesta es echo reply\n",
     "            rtt_mcs = (fin - inicio) * 1000000\n",
     "            print(f\"Respuesta recibida de {host}\")\n",
-    "            data[\"response\"] = True\n",
+    "            data[\"response_type\"] = 0\n",
     "            data[\"rtt_us\"] = rtt_mcs\n",
     "            data[\"len\"] = response.len\n",
     "            data[\"ttl\"] = response.ttl\n",
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "44f14bbb",
    "metadata": {},
    "outputs": [
@@ -100,12 +101,12 @@
       "text/plain": [
        "{'dst': 'utdt.edu.ar',\n",
        " 'response': True,\n",
-       " 'rtt_us': 3.5762786865234375,\n",
+       " 'rtt_us': 2.1457672119140625,\n",
        " 'len': 28,\n",
        " 'ttl': 55}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -152,7 +153,7 @@
     "        resultado = ping(host)\n",
     "        print(resultado)\n",
     "\n",
-    "        if resultado[\"response\"]: # Si se recibió respuesta\n",
+    "        if resultado[\"response_type\"] == 0: \n",
     "            received_packets += 1\n",
     "            total_rtt += resultado[\"rtt_us\"]\n",
     "            min_rtt = min(min_rtt, resultado[\"rtt_us\"])\n",
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -197,21 +198,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pinging cuhk.edu.cn...\n",
+      "Pinging cuhk.edu.cn...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Respuesta recibida de cuhk.edu.cn\n",
-      "{'dst': 'cuhk.edu.cn', 'response': True, 'rtt_us': 1.1920928955078125, 'len': 28, 'ttl': 112}\n",
+      "{'dst': 'cuhk.edu.cn', 'response': True, 'rtt_us': 2.384185791015625, 'len': 28, 'ttl': 112}\n",
       "Pinging sydney.edu.au...\n",
       "Respuesta recibida de sydney.edu.au\n",
-      "{'dst': 'sydney.edu.au', 'response': True, 'rtt_us': 1.9073486328125, 'len': 28, 'ttl': 107}\n",
+      "{'dst': 'sydney.edu.au', 'response': True, 'rtt_us': 2.6226043701171875, 'len': 28, 'ttl': 107}\n",
       "Pinging mit.edu...\n",
       "Respuesta recibida de mit.edu\n",
-      "{'dst': 'mit.edu', 'response': True, 'rtt_us': 0.7152557373046875, 'len': 28, 'ttl': 50}\n",
+      "{'dst': 'mit.edu', 'response': True, 'rtt_us': 1.9073486328125, 'len': 28, 'ttl': 51}\n",
       "Pinging ie.edu...\n",
       "Respuesta recibida de ie.edu\n",
       "{'dst': 'ie.edu', 'response': True, 'rtt_us': 1.6689300537109375, 'len': 28, 'ttl': 246}\n",
       "Pinging alexu.edu.eg...\n",
       "Respuesta recibida de alexu.edu.eg\n",
-      "{'dst': 'alexu.edu.eg', 'response': True, 'rtt_us': 1.9073486328125, 'len': 28, 'ttl': 47}\n"
+      "{'dst': 'alexu.edu.eg', 'response': True, 'rtt_us': 1.1920928955078125, 'len': 28, 'ttl': 47}\n"
      ]
     },
     {
@@ -226,14 +233,14 @@
        " 'received_packets': 5,\n",
        " 'lost_packets': 0,\n",
        " 'loss_percentage': 0.0,\n",
-       " 'total_rtt': 7.3909759521484375,\n",
-       " 'min_rtt': 0.7152557373046875,\n",
-       " 'max_rtt': 1.9073486328125,\n",
-       " 'average_rtt': 1.4781951904296875,\n",
-       " 'sd_rtt': 0.5168791625184727}"
+       " 'total_rtt': 9.775161743164062,\n",
+       " 'min_rtt': 1.1920928955078125,\n",
+       " 'max_rtt': 2.6226043701171875,\n",
+       " 'average_rtt': 1.9550323486328125,\n",
+       " 'sd_rtt': 0.5692165558964406}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
