--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,9 @@
     "from scapy.all import * \n",
     "from scapy.all import ICMP, IP\n",
     "import time\n",
-    "import statistics"
+    "import statistics\n",
+    "import matplotlib as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -38,7 +40,10 @@
     "\n",
     "    codigos = {\n",
     "        0: \"Red de destino inalcanzable\",\n",
-    "        1: \"Host de destino inalcanzable\"}\n",
+    "        1: \"Host de destino inalcanzable\",\n",
+    "        2: \"Protocolo inalcanzable\",\n",
+    "        3: \"Puerto inalcanzable\",\n",
+    "        }\n",
     "    \n",
     "    # Creo diccionario con valores por defecto\n",
     "    data = {\n",
@@ -84,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "44f14bbb",
    "metadata": {},
    "outputs": [
@@ -100,13 +105,13 @@
      "data": {
       "text/plain": [
        "{'dst': 'utdt.edu.ar',\n",
-       " 'response': True,\n",
-       " 'rtt_us': 2.1457672119140625,\n",
+       " 'response_type': 0,\n",
+       " 'rtt_us': 2.384185791015625,\n",
        " 'len': 28,\n",
-       " 'ttl': 55}"
+       " 'ttl': 56}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -190,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -198,27 +203,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pinging cuhk.edu.cn...\n"
+      "Pinging sydney.edu.au...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Respuesta recibida de cuhk.edu.cn\n",
-      "{'dst': 'cuhk.edu.cn', 'response': True, 'rtt_us': 2.384185791015625, 'len': 28, 'ttl': 112}\n",
-      "Pinging sydney.edu.au...\n",
       "Respuesta recibida de sydney.edu.au\n",
-      "{'dst': 'sydney.edu.au', 'response': True, 'rtt_us': 2.6226043701171875, 'len': 28, 'ttl': 107}\n",
+      "{'dst': 'sydney.edu.au', 'response_type': 0, 'rtt_us': 2.384185791015625, 'len': 28, 'ttl': 108}\n",
+      "Pinging alexu.edu.eg...\n",
+      "{'dst': 'alexu.edu.eg', 'response_type': None, 'rtt_us': None, 'len': None, 'ttl': None}\n",
+      "Pinging cuhk.edu.cn...\n",
+      "Respuesta recibida de cuhk.edu.cn\n",
+      "{'dst': 'cuhk.edu.cn', 'response_type': 0, 'rtt_us': 1.9073486328125, 'len': 28, 'ttl': 113}\n",
       "Pinging mit.edu...\n",
       "Respuesta recibida de mit.edu\n",
-      "{'dst': 'mit.edu', 'response': True, 'rtt_us': 1.9073486328125, 'len': 28, 'ttl': 51}\n",
+      "{'dst': 'mit.edu', 'response_type': 0, 'rtt_us': 2.1457672119140625, 'len': 28, 'ttl': 51}\n",
       "Pinging ie.edu...\n",
       "Respuesta recibida de ie.edu\n",
-      "{'dst': 'ie.edu', 'response': True, 'rtt_us': 1.6689300537109375, 'len': 28, 'ttl': 246}\n",
-      "Pinging alexu.edu.eg...\n",
-      "Respuesta recibida de alexu.edu.eg\n",
-      "{'dst': 'alexu.edu.eg', 'response': True, 'rtt_us': 1.1920928955078125, 'len': 28, 'ttl': 47}\n"
+      "{'dst': 'ie.edu', 'response_type': 0, 'rtt_us': 1.6689300537109375, 'len': 28, 'ttl': 247}\n"
      ]
     },
     {
@@ -230,17 +234,17 @@
        "  'mit.edu',\n",
        "  'sydney.edu.au'},\n",
        " 'sent_packets': 5,\n",
-       " 'received_packets': 5,\n",
-       " 'lost_packets': 0,\n",
-       " 'loss_percentage': 0.0,\n",
-       " 'total_rtt': 9.775161743164062,\n",
-       " 'min_rtt': 1.1920928955078125,\n",
-       " 'max_rtt': 2.6226043701171875,\n",
-       " 'average_rtt': 1.9550323486328125,\n",
-       " 'sd_rtt': 0.5692165558964406}"
+       " 'received_packets': 4,\n",
+       " 'lost_packets': 1,\n",
+       " 'loss_percentage': 0.2,\n",
+       " 'total_rtt': 8.106231689453125,\n",
+       " 'min_rtt': 1.6689300537109375,\n",
+       " 'max_rtt': 2.384185791015625,\n",
+       " 'average_rtt': 2.0265579223632812,\n",
+       " 'sd_rtt': 0.30779706209559576}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,6 +255,22 @@
     "\n",
     "ping_multiple_hosts(destinos)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4aebdfab",
+   "metadata": {},
+   "source": [
+    "## Gráficos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f41d1a99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
