--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -10,9 +10,7 @@
     "from scapy.all import * \n",
     "from scapy.all import ICMP, IP\n",
     "import time\n",
-    "import statistics\n",
-    "import matplotlib as plt\n",
-    "import seaborn as sns"
+    "import statistics"
    ]
   },
   {
@@ -31,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
@@ -40,10 +38,7 @@
     "\n",
     "    codigos = {\n",
     "        0: \"Red de destino inalcanzable\",\n",
-    "        1: \"Host de destino inalcanzable\",\n",
-    "        2: \"Protocolo inalcanzable\",\n",
-    "        3: \"Puerto inalcanzable\",\n",
-    "        }\n",
+    "        1: \"Host de destino inalcanzable\"}\n",
     "    \n",
     "    # Creo diccionario con valores por defecto\n",
     "    data = {\n",
@@ -55,14 +50,13 @@
     "    }\n",
     "    \n",
     "    print(f\"Pinging {host}...\")\n",
-    "    packet = IP(dst=host)/ICMP(type=8)\n",
-    "    response = sr1(packet, timeout=10, verbose=False) # sr1: envío y espero una sola respuesta\n",
+    "    packet = IP(dst=host)/ICMP(type=8) # Echo Request\n",
     "    inicio = time.time()\n",
+    "    response = sr1(packet, timeout=10, verbose=False) # sr1: envío y espero una sola respuesta\n",
+    "    fin = time.time()\n",
     "    \n",
     "    if response:\n",
-    "        fin = time.time()\n",
-    "\n",
-    "        if response.type == 3:\n",
+    "        if response.type == 3: # Si la respuesta es un destino inalcanzable\n",
     "            icmp_layer = response.getlayer(ICMP)\n",
     "            code = icmp_layer.code\n",
     "            print(f\"Destino {host} inalcanzable: \" + codigos[code])\n",
@@ -76,6 +70,12 @@
     "            data[\"len\"] = response.len\n",
     "            data[\"ttl\"] = response.ttl\n",
     "\n",
+    "        else:\n",
+    "            print(f\"Respuesta ICMP recibida de tipo {icmp_type}, código {icmp_code}\")\n",
+    "            data[\"response_type\"] = response.type\n",
+    "    else:\n",
+    "        print(f\"No se recibió respuesta de {host}\")\n",
+    "        data[\"response_type\"] = None\n",
     "    return data"
    ]
   },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "id": "44f14bbb",
    "metadata": {},
    "outputs": [
@@ -106,12 +106,12 @@
       "text/plain": [
        "{'dst': 'utdt.edu.ar',\n",
        " 'response_type': 0,\n",
-       " 'rtt_us': 2.384185791015625,\n",
+       " 'rtt_us': 19774.198532104492,\n",
        " 'len': 28,\n",
        " 'ttl': 56}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -203,26 +203,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pinging sydney.edu.au...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Respuesta recibida de sydney.edu.au\n",
-      "{'dst': 'sydney.edu.au', 'response_type': 0, 'rtt_us': 2.384185791015625, 'len': 28, 'ttl': 108}\n",
-      "Pinging alexu.edu.eg...\n",
-      "{'dst': 'alexu.edu.eg', 'response_type': None, 'rtt_us': None, 'len': None, 'ttl': None}\n",
       "Pinging cuhk.edu.cn...\n",
       "Respuesta recibida de cuhk.edu.cn\n",
-      "{'dst': 'cuhk.edu.cn', 'response_type': 0, 'rtt_us': 1.9073486328125, 'len': 28, 'ttl': 113}\n",
+      "{'dst': 'cuhk.edu.cn', 'response_type': 0, 'rtt_us': 440169.095993042, 'len': 28, 'ttl': 112}\n",
       "Pinging mit.edu...\n",
       "Respuesta recibida de mit.edu\n",
-      "{'dst': 'mit.edu', 'response_type': 0, 'rtt_us': 2.1457672119140625, 'len': 28, 'ttl': 51}\n",
+      "{'dst': 'mit.edu', 'response_type': 0, 'rtt_us': 208029.03175354004, 'len': 28, 'ttl': 48}\n",
       "Pinging ie.edu...\n",
       "Respuesta recibida de ie.edu\n",
-      "{'dst': 'ie.edu', 'response_type': 0, 'rtt_us': 1.6689300537109375, 'len': 28, 'ttl': 247}\n"
+      "{'dst': 'ie.edu', 'response_type': 0, 'rtt_us': 11074.066162109375, 'len': 28, 'ttl': 248}\n",
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n",
+      "{'dst': 'alexu.edu.eg', 'response_type': None, 'rtt_us': None, 'len': None, 'ttl': None}\n",
+      "Pinging sydney.edu.au...\n",
+      "Respuesta recibida de sydney.edu.au\n",
+      "{'dst': 'sydney.edu.au', 'response_type': 0, 'rtt_us': 320034.9807739258, 'len': 28, 'ttl': 111}\n"
      ]
     },
     {
@@ -237,14 +232,14 @@
        " 'received_packets': 4,\n",
        " 'lost_packets': 1,\n",
        " 'loss_percentage': 0.2,\n",
-       " 'total_rtt': 8.106231689453125,\n",
-       " 'min_rtt': 1.6689300537109375,\n",
-       " 'max_rtt': 2.384185791015625,\n",
-       " 'average_rtt': 2.0265579223632812,\n",
-       " 'sd_rtt': 0.30779706209559576}"
+       " 'total_rtt': 979307.1746826172,\n",
+       " 'min_rtt': 11074.066162109375,\n",
+       " 'max_rtt': 440169.095993042,\n",
+       " 'average_rtt': 244826.7936706543,\n",
+       " 'sd_rtt': 182400.01771177223}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,22 +250,6 @@
     "\n",
     "ping_multiple_hosts(destinos)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4aebdfab",
-   "metadata": {},
-   "source": [
-    "## Gráficos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f41d1a99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
