codigos de rta hasta el 5

--- a/imp.ipynb
+++ b/imp.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,11 @@
     "\n",
     "    codigos = {\n",
     "        0: \"Red de destino inalcanzable\",\n",
-    "        1: \"Host de destino inalcanzable\"}\n",
+    "        1: \"Host de destino inalcanzable\",\n",
+    "        2: \"Protocolo inalcanzable\",\n",
+    "        3: \"Puerto inalcanzable\",\n",
+    "        4: \"Fragmentación necesaria y DF activado\",\n",
+    "        5: \"Ruta de origen fallida\"}\n",
     "    \n",
     "    # Creo diccionario con valores por defecto\n",
     "    data = {\n",
