--- a/imp.ipynb
+++ b/imp.ipynb
@@ -38,7 +38,11 @@
     "\n",
     "    codigos = {\n",
     "        0: \"Red de destino inalcanzable\",\n",
-    "        1: \"Host de destino inalcanzable\"}\n",
+    "        1: \"Host de destino inalcanzable\",\n",
+    "        2: \"Protocolo inalcanzable\",\n",
+    "        3: \"Puerto inalcanzable\",\n",
+    "        4: \"Fragmentación requerida y DF activado\",\n",
+    "        5: \"Ruta de origen fallida\"}\n",
     "    \n",
     "    # Creo diccionario con valores por defecto\n",
     "    data = {\n",
